--- a/source/data/team/shoaib_burq.yaml
+++ b/source/data/team/shoaib_burq.yaml
@@ -2,6 +2,6 @@ weight: 6
 text: "Shoaib works on high-performance and scalable applications."
 name: "Shoaib Burq"
 position: "Geospatial Applications Developer"
-avatar: "img/crew/sb1.png"
+avatar: "img/crew/sb1.jpg"
 linkedin: "https://www.linkedin.com/in/shoaibburq"
 email: "shoaib@geografia.com.au"
