--- a/source/config.toml
+++ b/source/config.toml
@@ -40,6 +40,11 @@ theme = "geografia_theme"
     weight = 1
 
 [[menu.main]]
+    name = "about"
+    url  = "/about"
+    weight = 1
+
+[[menu.main]]
     name = "Ideas"
     url  = "/#ideas"
     weight = 1
