--- a/source/data/works/3.yaml
+++ b/source/data/works/3.yaml
@@ -1,5 +1,5 @@
 image: images/@stock/work-3.jpg
 title: Beautiful Girl
 link_to: portfolio-item.html
-klass: graphi-design
+klass: brand
 desc: Design &amp; Development
