--- a/source/data/works/4.yaml
+++ b/source/data/works/4.yaml
@@ -1,5 +1,5 @@
 image: images/@stock/work-4.jpg
 title: Beautiful Girl
 link_to: portfolio-item.html
-klass: graphi-design
+klass: development
 desc: Design &amp; Development
