--- a/source/data/works/6.yaml
+++ b/source/data/works/6.yaml
@@ -1,5 +1,5 @@
 image: images/@stock/work-6.jpg
 title: Beautiful Girl
 link_to: portfolio-item.html
-klass: graphi-design
+klass: web-design
 desc: Design &amp; Development
