--- a/source/data/works/1.yaml
+++ b/source/data/works/1.yaml
@@ -1,5 +1,5 @@
 image: images/@stock/work-1.jpg
 title: Beautiful Girl
 link_to: portfolio-item.html
-klass: graphi-design
+klass: graphic-design
 desc: Design &amp; Development
