--- a/source/data/works/2.yaml
+++ b/source/data/works/2.yaml
@@ -1,5 +1,5 @@
 image: images/@stock/work-2.jpg
 title: Beautiful Girl
 link_to: portfolio-item.html
-klass: graphi-design
+klass: web-design print
 desc: Design &amp; Development
