--- a/source/data/works/5.yaml
+++ b/source/data/works/5.yaml
@@ -1,5 +1,5 @@
 image: images/@stock/work-5.jpg
 title: Beautiful Girl
 link_to: portfolio-item.html
-klass: graphi-design
+klass: print brand
 desc: Design &amp; Development
