--- a/source/config.toml
+++ b/source/config.toml
@@ -70,7 +70,7 @@ theme = "geografia_theme"
 
 [[menu.main]]
     name = "Blog"
-    url  = "/blog"
+    url  = "https://medium.com/geografia"
     weight = 7
 
 [params.features]
