--- a/source/config.toml
+++ b/source/config.toml
@@ -86,7 +86,7 @@ theme = "geografia_theme"
     # For more informtion take a look at the README.
 
 [params.works]
-    enable = false
+    enable = true
     teaser = "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing."
 
 [params.map]
