--- a/source/config.toml
+++ b/source/config.toml
@@ -119,4 +119,4 @@ theme = "geografia_theme"
 
 [params.lab]
     title = "Lab"
-    teaser = "Experiments and Prototypes"
+    teaser = "Research and Development / Experiments / Prototypes"
