--- a/source/config.toml
+++ b/source/config.toml
@@ -92,7 +92,7 @@ theme = "geografia_theme"
 
 [params.works]
     enable = true
-    teaser = "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing."
+    teaser = "We take on complex multi-disciplinary projects around Australia and in South East Asia, working in economics, demography and spatial planning. A selection of the hundreds of projects we have completed are described below."
 
 [params.map]
     enable = true
