--- a/source/data/slides/2.yaml
+++ b/source/data/slides/2.yaml
@@ -10,4 +10,7 @@ buttons:
   klass: bottom-to-top
   items:
     - text: Geografia lab
+      klass: boxed
       link_to: /lab/
+    - text: Get in touch
+      link_to: mailto:info@geografia.com.au?su=Hi Geografia!
