--- a/source/config.toml
+++ b/source/config.toml
@@ -123,7 +123,7 @@ theme = "geografia_theme"
 [params.addresses]
     enable = true
     title = "Contact"
-    teaser = "Drop by, call or send an email us"
+    teaser = "Drop by, call or send an email"
 
 [params.lab]
     title = "Lab"
