--- a/source/data/team/join_us.yaml
+++ b/source/data/team/join_us.yaml
@@ -2,5 +2,5 @@ weight: 12
 text: "We are always interested in working with people who are passionate about spatial analysis and geography"
 name: "Join us!"
 position: "Like what we do at Geografia?"
-avatar: "img/crew/join-us.jpg"
+avatar: "img/crew/join-us.png"
 email: "info@geografia.com.au?subject=I like what you do at Geografia"
