speed up scrolling fixes #32

--- a/source/data/team/join_us.yaml
+++ b/source/data/team/join_us.yaml
@@ -1,6 +1,6 @@
 weight: 12
 text: "We are always interested in working with people who are passionate about spatial analysis and geography"
-name: "Join us!"
-position: "Like what we do at Geografia?"
+name: "Like what we do at Geografia?"
+position: "Join us!"
 avatar: "img/crew/join-us.png"
 email: "info@geografia.com.au?subject=I like what you do at Geografia"
