--- a/source/data/slides/1.yaml
+++ b/source/data/slides/1.yaml
@@ -4,7 +4,7 @@ title:
   text: Our services
 small_title:
   klass: bottom-to-top
-  text: We help solve the complex problems of development and planning in our cities, towns, economies and communities
+  text: Our cities, towns, economies and communities are complex systems - we help solve their problems
 buttons:
   klass: bottom-to-top
   items:
