--- a/source/data/associates/marianne_stoettrup.yaml
+++ b/source/data/associates/marianne_stoettrup.yaml
@@ -1,7 +1,7 @@
 weight: 11
 text: "Marianne collaborates on economic modelling, planning and land use studies. "
 name: "Marianne Stoettrup"
-position: "Marianne Stoettrup"
+position: "Consulting Economist"
 avatar: "img/crew/ms1.jpg"
 linkedin: "https://au.linkedin.com/in/marianne-st%C3%B8ttrup-82137ab"
 website: "http://mattersmore.com.au/"
