shorten shoaibs byline to fix mobile layout
refs #36

--- a/source/data/team/shoaib_burq.yaml
+++ b/source/data/team/shoaib_burq.yaml
@@ -1,5 +1,5 @@
 weight: 5
-text: "Shoaib works on high-performance and scalable applications."
+text: "Shoaib works on high-performance and scalable apps."
 name: "Shoaib Burq"
 position: "Geospatial Applications Developer"
 avatar: "img/crew/sb1.jpg"
