--- a/source/data/team/daniel_hernandez.yml
+++ b/source/data/team/daniel_hernandez.yml
@@ -1,7 +1,7 @@
 weight: 12
 text: "Daniel conducts Spatial Analysis."
 name: "Daniel Hernandez"
-position: "GIS Analyst"
-avatar: "img/crew/daniel.png"
+position: "Geospatial Analyst"
+avatar: "img/crew/dh1.png"
 linkedin: "https://www.linkedin.com/in/daniel-hernandez-84552994"
 email: "daniel@geografia.com.au"
