--- a/source/data/milestones/3.yaml
+++ b/source/data/milestones/3.yaml
@@ -1,4 +1,4 @@
 icon: book
 from: 0
-to: 25
-title: Articles, book chapters and presentations prepared
+to: 27
+title: Articles, book chapters and presentations
