--- a/source/data/team/cesar_nicolas.yaml
+++ b/source/data/team/cesar_nicolas.yaml
@@ -1,5 +1,5 @@
 weight: 6
-text: "Cesar specialises in infographics and map design."
+text: "Cesar specialises in infographics, map design and other aspects of Geografia's communication."
 name: "Cesar Nicolas"
 position: "Project Researcher"
 avatar: "img/crew/cs1.png"
