--- a/source/data/team/daniel_hernandez.yml
+++ b/source/data/team/daniel_hernandez.yml
@@ -1,5 +1,5 @@
 weight: 12
-text: "Daniel conducts Spatial Analysis."
+text: "Daniel is responsible for mapping and geospatial analysis."
 name: "Daniel Hernandez"
 position: "Geospatial Analyst"
 avatar: "img/crew/dh1.png"
