--- a/wercker.yml
+++ b/wercker.yml
@@ -7,8 +7,7 @@ deploy:
   steps:
     - install-packages:
         packages: git ssh-client
-    - uetchy/gh-pages:
+    - leipert/git-push:
         token: $GIT_TOKEN
         repo: geografia-au/geografia-au.github.io
-        path: public
         domain: geografia.com.au
