--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@ box: debian
 build:
   steps:
     - arjen/hugo-build:
-        version: "0.16"
+        version: "0.17"
         basedir: "source"
 deploy:
   steps:
@@ -12,3 +12,4 @@ deploy:
         token: $GIT_TOKEN
         repo: geografia-au/geografia-au.github.io
         domain: geografia.com.au
+        basedir: public
