--- a/wercker.yml
+++ b/wercker.yml
@@ -9,7 +9,7 @@ deploy:
     - install-packages:
         packages: git ssh-client
     - leipert/git-push:
-        token: $GIT_TOKEN
+        gh_oauth: $GIT_TOKEN
         repo: geografia-au/geografia-au.github.io
         domain: geografia.com.au
         basedir: public
