--- a/source/data/team/kevin_johnson.yaml
+++ b/source/data/team/kevin_johnson.yaml
@@ -1,5 +1,5 @@
 weight: 1
-text: "Kevin leads Geografia's statistical, economic and demographic modelling."
+text: "Kevin leads Geografia's statistical and demographic modelling work."
 name: "Kevin Johnson"
 position: "Managing Director"
 avatar: "img/crew/kj1.jpg"
