--- a/source/data/team/join_us.yaml
+++ b/source/data/team/join_us.yaml
@@ -1,5 +1,5 @@
 weight: 12
-text: "We are always interested in working with people who are passionate about spatial analysis and geography"
+text: "We are always interested in working with people who are passionate about geography and spatial analysis"
 name: "Like what we do at Geografia?"
 position: "Join us!"
 avatar: "img/crew/join-us.png"
