--- a/source/data/team/matt_benson.yaml
+++ b/source/data/team/matt_benson.yaml
@@ -1,5 +1,5 @@
 weight: 2
-text: "Matt's experience spans infrastructure planning and spatial analysis in Asia and Australia."
+text: "Matt's experience spans infrastructure and spatial analysis in Asia and Australia."
 name: "Matt Benson"
 position: "Director"
 avatar: "img/crew/mb1.jpg"
