--- a/source/data/team/list.yaml
+++ b/source/data/team/list.yaml
@@ -40,7 +40,7 @@
   email: "kirsten@geografia.com.au"
 -matt:
   weight: 2
-  text: "Matt's experience spans infrastructure planning and spatial analysis in Asia and Australia."
+  text: "Matt's experience spans infrastructure and spatial analysis in Asia and Australia."
   name: "Matt Benson"
   position: "Director"
   avatar: "img/crew/mb1.jpg"
