--- a/source/data/slides/3.yaml
+++ b/source/data/slides/3.yaml
@@ -1,7 +1,7 @@
 bg: images/Geografia/slide-7-geo.jpg
 small_title:
   klass: bottom-to-top
-  text: We share a lot of our ideas and R&D results through our blog
+  text: We share some of our ideas and R&D results through our blog
 title:
   klass: bottom-to-top
   text: Our thoughts
