--- a/source/data/team/list.yaml
+++ b/source/data/team/list.yaml
@@ -24,7 +24,7 @@
   email: "dean@geografia.com.au"
 -kevin:
   weight: 1
-  text: "Kevin leads Geografia's statistical and demographic modelling work."
+  text: "Kevin leads Geografia's systems modelling work in economics and demography."
   name: "Kevin Johnson"
   position: "Managing Director"
   avatar: "img/crew/kj1.jpg"
