add germany and optimize images

--- a/source/data/slides/1.yaml
+++ b/source/data/slides/1.yaml
@@ -1,4 +1,4 @@
-bg: images/Geografia/slide-6-geo.jpg
+bg: //res.cloudinary.com/sabman/image/upload/f_auto,q_auto/v1488580240/slide-6-geo_uw8bff.jpg
 title:
   klass: bottom-to-top
   text: Our services
