--- a/source/data/slides/3.yaml
+++ b/source/data/slides/3.yaml
@@ -1,4 +1,4 @@
-bg: images/Geografia/slide-7-geo.jpg
+bg: //res.cloudinary.com/sabman/image/upload/f_auto,q_auto/v1488580236/slide-7-geo_xdyqtn.jpg
 small_title:
   klass: bottom-to-top
   text: We share some of our ideas and R&D results through our blog
