--- a/source/data/slides/2.yaml
+++ b/source/data/slides/2.yaml
@@ -1,4 +1,4 @@
-bg: images/Geografia/slide-2-geo.jpg
+bg: //res.cloudinary.com/sabman/image/upload/f_auto,q_auto/v1488580233/slide-2-geo_ci64me.jpg
 klass: centered-text
 small_title:
   klass: bottom-to-top
