--- a/source/data/team/list.yaml
+++ b/source/data/team/list.yaml
@@ -32,7 +32,7 @@
   email: "kevin@geografia.com.au"
 -owen:
   weight: 7
-  text: "Owen discovers and develops business opportunities within Geografia's domain expertise."
+  text: "Owen discovers and develops business and application development opportunities within Geografia's domain."
   name: "Owen McCormack"
   position: "Business Development Manager"
   avatar: "img/crew/ok1.png"
