--- a/source/data/team/list.yaml
+++ b/source/data/team/list.yaml
@@ -1,6 +1,6 @@
 -cesar:
   weight: 6
-  text: "Cesar specialises in infographics, map design and other aspects of Geografia's communication."
+  text: "A planner by trade, Cesar specialises in infographics, map design and other aspects of our communication work."
   name: "Cesar Nicolas"
   position: "Project Researcher"
   avatar: "img/crew/cs1.png"
