--- a/source/config.toml
+++ b/source/config.toml
@@ -26,7 +26,7 @@ theme = "geografia_theme"
     # Enable the contact form by entering your Formspree.io email
 
     about_us = ""
-    copyright = "Copyright (c) 2015 - 2016, Geografia; all rights reserved."
+    copyright = "Copyright (c) 2015 - 2017, Geografia; all rights reserved."
     date_format = "2006-01-02"
     logo = "img/geografia_logo.svg"
     email = "info@geografia.com.au"
@@ -57,29 +57,34 @@ theme = "geografia_theme"
     weight = 2
 
 [[menu.main]]
+    name = "Products"
+    url  = "/products"
+    weight = 3
+
+[[menu.main]]
     name = "Services"
     url  = "/services"
-    weight = 3
+    weight = 4
 
 [[menu.main]]
     name = "Projects"
     url  = "/projects"
-    weight = 4
+    weight = 5
 
 [[menu.main]]
     name = "Contact"
     url  = "/contact"
-    weight = 5
+    weight = 6
 
 [[menu.main]]
     name = "Lab"
     url  = "/lab"
-    weight = 6
+    weight = 7
 
 [[menu.main]]
     name = "Blog"
     url  = "https://blog.geografia.com.au"
-    weight = 7
+    weight = 8
 
 [params.main_slider]
     enable = true
@@ -129,3 +134,7 @@ theme = "geografia_theme"
 [params.lab]
     title = "Lab"
     teaser = "Research and Development / Experiments / Prototypes"
+
+[params.products]
+    title = "Products"
+    teaser = "Geografia is continuously building websites, applications and decision-support tools for our clients."
